@@ -185,13 +185,15 @@ else {
 				}
 			}
 			$max_input_vars=ini_get('max_input_vars') ;
-			if (($totalCount*2)>$max_input_vars) {
+			$total_vars=(($totalCount*2)+10) ;
+			$total_vars_rounded=(ceil($total_vars/1000)*1000)+1000;
+			if ($total_vars>$max_input_vars) {
 				print "<tr>" ;
 					print "<td colspan=" . ($resultRoles->rowCount()+1) . ">" ;
 						print "<div class='error'>" ;
 						print "php.ini max_input_vars=" . $max_input_vars . "<br />";
-						print _("Number of inputs on this page") . "=" . ($totalCount*2) . "<br/>";
-						print _("This form is very large and data will be truncated unless you edit php.ini. Add the line <i>max_input_vars=5000</i> to your php.ini file on your server.") ;
+						print _("Number of inputs on this page") . "=" . $total_vars . "<br/>";
+						print sprintf(_('This form is very large and data will be truncated unless you edit php.ini. Add the line <i>max_input_vars=%1$s</i> to your php.ini file on your server.'), $total_vars_rounded) ;
 						print "</div>" ;	
 					print "</td>" ;
 				print "</tr>" ;
